--- a/resume.css
+++ b/resume.css
@@ -18,7 +18,7 @@
 
 /* //-- yui-grids style overrides -- */
 body { font-family: Georgia; color: rgb(157, 70, 214); }
-#inner { padding: 10px 80px; margin: 80px auto; background: #00ee93; border: solid #666; border-width: 8px 0 2px 0; }
+#inner { padding: 10px 80px; margin: 80px auto; background: #00ee93; border: solid rgb(221, 20, 20); border-width: 8px 0 2px 0; }
 .yui-gf { margin-bottom: 2em; padding-bottom: 2em; border-bottom: 1px solid #ccc; }
 
 /* //-- header, body, footer -- */
@@ -34,7 +34,7 @@ body { font-family: Georgia; color: rgb(157, 70, 214); }
 #hd h1 { font-size: 48px; text-transform: uppercase; letter-spacing: 3px; }
 h2 { font-size: 152% }
 h3, h4 { font-size: 122%; }
-h1, h2, h3, h4 { color: #333; }
+h1, h2, h3, h4 { color: rgb(10, 253, 253); }
 p { font-size: 100%; line-height: 18px; padding-right: 3em; }
 a { color: #990003 }
 a:hover { text-decoration: none; }
