--- a/resume.css
+++ b/resume.css
@@ -14,7 +14,7 @@
 .msg { padding: 10px; background: rgb(238, 9, 9); position: relative; }
 .msg h1 { color: #fff;  }
 .msg a { margin-left: 20px; background: #408814; color: white; padding: 4px 8px; text-decoration: none; }
-.msg a:hover { background: #266400; }
+.msg a:hover { background: #02f0f0; }
 
 /* //-- yui-grids style overrides -- */
 body { font-family: Georgia; color: rgb(157, 70, 214); }
@@ -70,3 +70,16 @@ a#pdf:hover { background: #222; }
 /* --// override to force 1/8th width grids -- */
 .yui-gf .yui-u{width:80.2%;}
 .yui-gf div.first{width:12.3%;}
+
+/* image fix starts here  */
+.img-container{
+    width: 10em;
+    height: 10em;
+}
+
+.img-container img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
